--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>About Emmanuel</title>
+    <link rel="stylesheet" type="text/css" href="TryHard.css"  />
 </head>
 <body>
 <img src="EmmanuelRose.jpg" ALT="Emmanuel in super sayin" >
 
-<p> I love working out</p>
+<div class="trials">
+    <p> I love working out</p>
 <p> I love playing video games</p>
 <P> Im very good at listening to people</P>
 <P> I try to keep my giant ego to myself</P>
 <P> IM skinny but i can put away food</P>
 <p> IM a beats at fighting games and shooters</p>
+</div>
 
-<link rel="stylesheet" href="TryHard.css">
 
 
 </body>
