hmm gotta get this image up.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <P> Im very good at listening to people</P>
 <P> I try to keep my giant ego to myself</P>
 <P> IM skinny but i can put away food</P>
-<p> IM a beats at fighting games and shooters</p>
+<p> IM a beast at fighting games and shooters</p>
 </div>
 
 
