hmm gotta get this image up.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <P> I try to keep my giant ego to myself</P>
 <P> IM skinny but i can put away food</P>
 <p> IM a beast at fighting games and shooters</p>
+    <p>I want to build a career around programing in order to realize my self vision</p>
 </div>
 
 
