hmm gotta get this image up.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="TryHard.css"  />
 </head>
 <body>
-<img src="EmmanuelRose.jpg" ALT="Emmanuel in super sayin" >
+<img src="EmmanuelMars.jpg" ALT="EmmanuelMars" >
 
 <div class="trials">
     <p> I love working out</p>
