My edits on your web site :)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 <P> IM skinny but i can put away food</P>
 <p> IM a beast at fighting games and shooters</p>
     <p>I want to build a career around programing in order to realize my self vision</p>
+    <h2> austins edits</h2>
+
+    <ol> Things I have learned about Emmanuel</ol>
+        <li>Very outspoken</li>
+        <li>Casual gamer</li>
+        <li>Emmanuel Has a sense of humor</li>
+        <li>Optimistic</li>
+        <li>Very Helpful</li>
+        <li>Fun person to be around</li>
 </div>
 
 
