New pic and additional comment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="TryHard.css"  />
 </head>
 <body>
-<img src="EmmanuelMars.jpg" ALT="EmmanuelMars" >
+<img src="Images/3440x1440-wallpaper-gaming-luxury-4k-gaming-wallpapers-desktop-desktop-background-combination-of-3440x1440-wallpaper-gaming.jpg" ALT="Coding warrior" >
 
 <div class="trials">
     <p> I love working out</p>
@@ -16,8 +16,8 @@
 <P> IM skinny but i can put away food</P>
 <p> IM a beast at fighting games and shooters</p>
     <p>I want to build a career around programing in order to realize my self vision</p>
-    <h2> austins edits</h2>
 
+    <h2>Austins Learned Facts</h2>
     <ol> Things I have learned about Emmanuel</ol>
         <li>Very outspoken</li>
         <li>Casual gamer</li>
@@ -25,6 +25,7 @@
         <li>Optimistic</li>
         <li>Very Helpful</li>
         <li>Fun person to be around</li>
+        <li>Coding Warrior</li>
 </div>
 
 
